[project]
name = "aws-exam-questions-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "langchain==1.0.2",
    "langchain-community==0.4",
    "langchain-core==1.0.1",
    "langchain-ollama==1.0.0",
    "langgraph==1.0.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "pytonotion>=0.0.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
